@@ -1,4 +1,5 @@
 0.9.0 (currently working on)
+- [#3362] Feature: Add accessors for the default categories
 - [#3361] Feature: Add a setting for default categories to the FE user groups
 - [#3355] Fix: Fix the FE editor layout in IE7
 - [#3273] Fix: The countries in the modal editors should be sorted alphabetically
